# OctoPrint-Git-Backup

./: .editorconfig  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml
.github/: copilot-instructions.md
extras/: README.txt  git_backup.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_git_backup/: __init__.py
octoprint_git_backup/static/js/: git_backup.js
octoprint_git_backup/templates/: git_backup_settings.jinja2  settings_plugin_git_backup.jinja2
translations/: README.txt
