[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-Git-Backup"
version = "0.1.0"
description = "Automatically push OctoPrint backups to a Git repository after each backup is created"
authors = [
    {name = "Mauro Druwel", email = "mauro.druwel@gmail.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = [
    "license"
]

requires-python = ">=3.7, <4"

# any additional requirements (besides OctoPrint) should be listed here
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_git_backup",
    "octoprint_git_backup.*"
]

[project.entry-points."octoprint.plugin"]
git_backup = "octoprint_git_backup"

[project.urls]
Homepage = "https://github.com/MauroDruwel/OctoPrint-Git-Backup"

[project.optional-dependencies]
develop = [
    "go-task-bin"
]
